# testGpnBuddy

./: PredictEngineTest.py  docker-compose.yml  predictorEngine.py  pyproject.toml  readme.md  requirements.txt
docker/: backend.Dockerfile
src/: main.py
src/calculations/: predictor_engine.py
src/java/buddyplugin/: README.md  build.gradle  settings.gradle
src/java/buddyplugin/src/main/java/: BuddyAction.java
src/models/: models.py
src/python/: main.py  pyproject.toml  readme.md  requirements.txt
src/python/calculations/: predictor_engine.py
src/python/models/: models.py
src/python/routers/: predictor.py
src/python/tests/: predict_engine_test.py
src/tests/: predict_engine_test.py
